// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownChip makes the whole pill the toggle, with the close button as a sibling, and no a11y violations 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
  width: 100%;
}

.emotion-4 {
  cursor: pointer;
  max-width: 100%;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: var(--tonic-radii-lg);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem + 1rem + .5rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-4>:first-of-type {
  min-width: 0;
}

.emotion-4:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  outline: none;
}

.emotion-4:invalid,
.emotion-4[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-4:invalid:hover,
.emotion-4[aria-invalid=true]:hover,
.emotion-4:invalid[data-hover],
.emotion-4[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-4:disabled,
.emotion-4:disabled:focus,
.emotion-4:disabled:hover,
.emotion-4[aria-disabled=true],
.emotion-4[aria-disabled=true]:focus,
.emotion-4[aria-disabled=true]:hover,
.emotion-4[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-6 {
  position: absolute;
  right: calc(.5rem - .0625rem);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-transparent);
  border: none;
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
}

.emotion-6:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1q));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1q);
}

.emotion-6:hover,
.emotion-6[data-hover] {
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  color: var(--tonic-colors-text-accent);
}

.emotion-6:disabled,
.emotion-6:disabled:focus,
.emotion-6:disabled:hover,
.emotion-6[aria-disabled=true],
.emotion-6[aria-disabled=true]:focus,
.emotion-6[aria-disabled=true]:hover,
.emotion-6[data-disabled] {
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-10 {
  position: absolute;
  z-index: var(--tonic-zIndices-dropdown);
  outline: 0;
  background-color: var(--tonic-colors-background-highest);
  box-shadow: var(--tonic-shadows-high);
  color: inherit;
  margin: 0;
  padding: 0;
  padding-top: var(--tonic-space-2x);
  padding-bottom: var(--tonic-space-2x);
  max-height: 40vh;
  overflow-y: auto;
  min-width: 0;
  max-width: 640px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.emotion-12 {
  height: auto;
  opacity: 1;
  -webkit-transition: height 133ms linear,opacity 133ms linear;
  transition: height 133ms linear,opacity 133ms linear;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: inherit;
  border: none;
  color: var(--tonic-colors-text-primary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  padding-top: var(--tonic-space-2x);
  padding-bottom: var(--tonic-space-2x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.emotion-16:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-16[aria-selected=true],
.emotion-16[data-selected] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-actions-selected);
}

.emotion-16:hover,
.emotion-16[data-hover] {
  background-color: var(--tonic-colors-actions-hovered);
}

.emotion-16:disabled,
.emotion-16:disabled:focus,
.emotion-16:disabled:hover,
.emotion-16[aria-disabled=true],
.emotion-16[aria-disabled=true]:focus,
.emotion-16[aria-disabled=true]:hover,
.emotion-16[data-disabled] {
  background-color: inherit;
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-tonic="Dropdown"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        aria-controls="@tonic-ui/react:Menu-_r_1_"
        aria-expanded="true"
        aria-haspopup="menu"
        class="emotion-4 emotion-1"
        data-tonic="DropdownChip"
        id="@tonic-ui/react:MenuToggle-_r_1_"
        role="button"
        tabindex="0"
      >
        Apple
      </div>
      <button
        aria-label="Close"
        class="emotion-6 emotion-1"
        data-tonic="TagCloseButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-8 emotion-1"
          data-icon="CloseSIcon"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M9 8l4-4-1-1-4 4-4-4-1 1 4 4-4 4 1 1 4-4 4 4 1-1-4-4z"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="@tonic-ui/react:MenuToggle-_r_1_"
      class="emotion-10 emotion-1"
      data-menu-id="@tonic-ui/react:Menu-_r_1_"
      data-popper-escaped=""
      data-popper-placement="bottom-start"
      data-popper-reference-hidden=""
      data-tonic="MenuList"
      id="@tonic-ui/react:Menu-_r_1_"
      role="menu"
      style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="emotion-12 emotion-1"
        data-tonic="Collapse"
      >
        <div
          class="emotion-14 emotion-1"
        >
          <button
            class="emotion-16 emotion-1"
            data-tonic="MenuItem"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Apple
          </button>
          <button
            class="emotion-16 emotion-1"
            data-tonic="MenuItem"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Banana
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownChip opens the menu and matches the snapshot, with no a11y violations 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  position: relative;
  width: 100%;
}

.emotion-4 {
  cursor: pointer;
  max-width: 100%;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--tonic-colors-transparent);
  border-radius: var(--tonic-radii-lg);
  border-style: solid;
  border-width: .0625rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding-left: calc(.5rem - .0625rem);
  padding-right: calc(.5rem - .0625rem);
  font-size: var(--tonic-fontSizes-xs);
  line-height: var(--tonic-lineHeights-xs);
  min-height: var(--tonic-sizes-6x);
  padding-top: calc(.125rem - .0625rem);
  padding-bottom: calc(.125rem - .0625rem);
  background-color: var(--tonic-colors-_component-tags-foreground-gray);
  color: var(--tonic-colors-text-primary);
}

.emotion-4>:first-of-type {
  min-width: 0;
}

.emotion-4:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  outline: none;
}

.emotion-4:invalid,
.emotion-4[aria-invalid=true] {
  background-color: var(--tonic-colors-_foreground-negative-enabled);
  color: var(--tonic-colors-text-_fixed-dark-accent);
}

.emotion-4:invalid:hover,
.emotion-4[aria-invalid=true]:hover,
.emotion-4:invalid[data-hover],
.emotion-4[aria-invalid=true][data-hover] {
  color: var(--tonic-colors-text-_fixed-dark-accent);
  background-color: var(--tonic-colors-_foreground-negative-enabled);
}

.emotion-4:disabled,
.emotion-4:disabled:focus,
.emotion-4:disabled:hover,
.emotion-4[aria-disabled=true],
.emotion-4[aria-disabled=true]:focus,
.emotion-4[aria-disabled=true]:hover,
.emotion-4[data-disabled] {
  background-color: var(--tonic-colors-_foreground-tertiary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

.emotion-6 {
  position: absolute;
  z-index: var(--tonic-zIndices-dropdown);
  outline: 0;
  background-color: var(--tonic-colors-background-highest);
  box-shadow: var(--tonic-shadows-high);
  color: inherit;
  margin: 0;
  padding: 0;
  padding-top: var(--tonic-space-2x);
  padding-bottom: var(--tonic-space-2x);
  max-height: 40vh;
  overflow-y: auto;
  min-width: 0;
  max-width: 640px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.emotion-8 {
  height: auto;
  opacity: 1;
  -webkit-transition: height 133ms linear,opacity 133ms linear;
  transition: height 133ms linear,opacity 133ms linear;
}

.emotion-12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: inherit;
  border: none;
  color: var(--tonic-colors-text-primary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  padding-top: var(--tonic-space-2x);
  padding-bottom: var(--tonic-space-2x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.emotion-12:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-12[aria-selected=true],
.emotion-12[data-selected] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-actions-selected);
}

.emotion-12:hover,
.emotion-12[data-hover] {
  background-color: var(--tonic-colors-actions-hovered);
}

.emotion-12:disabled,
.emotion-12:disabled:focus,
.emotion-12:disabled:hover,
.emotion-12[aria-disabled=true],
.emotion-12[aria-disabled=true]:focus,
.emotion-12[aria-disabled=true]:hover,
.emotion-12[data-disabled] {
  background-color: inherit;
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-tonic="Dropdown"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        aria-controls="@tonic-ui/react:Menu-_r_0_"
        aria-expanded="true"
        aria-haspopup="menu"
        class="emotion-4 emotion-1"
        data-tonic="DropdownChip"
        id="@tonic-ui/react:MenuToggle-_r_0_"
        role="button"
        tabindex="0"
      >
        Apple
      </div>
    </div>
    <div
      aria-labelledby="@tonic-ui/react:MenuToggle-_r_0_"
      class="emotion-6 emotion-1"
      data-menu-id="@tonic-ui/react:Menu-_r_0_"
      data-popper-escaped=""
      data-popper-placement="bottom-start"
      data-popper-reference-hidden=""
      data-tonic="MenuList"
      id="@tonic-ui/react:Menu-_r_0_"
      role="menu"
      style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="emotion-8 emotion-1"
        data-tonic="Collapse"
      >
        <div
          class="emotion-10 emotion-1"
        >
          <button
            class="emotion-12 emotion-1"
            data-tonic="MenuItem"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Apple
          </button>
          <button
            class="emotion-12 emotion-1"
            data-tonic="MenuItem"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Banana
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
